Crash on changing curve type from Bezier to NURBS in Geometry Nodes #94082

Closed
opened 2021-12-15 01:14:18 +01:00 by Andrii Sokolov · 7 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes when changing spline type from Bezier to NURBS in "Geometry Nodes" tab. Geometry Nodes applied to curve itself. Changing to other spline types, changin types without Geometry Nodes applied or working with NURBS curve from beginning behaves as expected.
Have checked on another machine as well with the same result - Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47
Same version of Blender.

Exact steps for others to reproduce the error

  • Create Bezier curve in Blender's default scene
  • Go to Geometry Nodes tab
  • Apply Geometry Nodes to curve created in step 1, clicking on New button
  • Create Curve to Points node connected to Group Input and Group Output
  • Add Instances on Points node after "Curve to Points"
  • Drag the Cubeobject from Outliner and drop it in "Geometry Nodes" graph to create Object Info node linked to "Cube"
  • Connect "Geometry" socket from Cube to Instancesocket on "Instances on Points" node
  • Make sure that Bezier curve is selected and go to Edit Mode
  • Inside Viewport click on Curve -> Set Spline Type -> NURBS
  • Blender crashes.

See attached .blend file below with 1-8 steps prepared.
Geometry_Nodes_Change_To_NURBS_Crash.blend

Video with crash event attached as well.
Blender crash (change spline to NURBS in Geo Nodes).mkv

Thanks!

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes when changing spline type from Bezier to NURBS in "Geometry Nodes" tab. Geometry Nodes applied to curve itself. Changing to other spline types, changin types without Geometry Nodes applied or working with NURBS curve from beginning behaves as expected. Have checked on another machine as well with the same result - Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47 Same version of Blender. **Exact steps for others to reproduce the error** - Create **Bezier curve** in Blender's default scene - Go to **Geometry Nodes** tab - Apply Geometry Nodes to curve created in step 1, clicking on **New** button - Create **Curve to Points** node connected to Group Input and Group Output - Add **Instances on Points** node after "Curve to Points" - Drag the **Cube**object from Outliner and drop it in "Geometry Nodes" graph to create **Object Info** node linked to "Cube" - Connect "Geometry" socket from **Cube** to **Instance**socket on "Instances on Points" node - Make sure that Bezier curve is selected and go to **Edit Mode** - Inside Viewport click on **Curve -> Set Spline Type -> NURBS** - Blender crashes. ### See attached .blend file below with 1-8 steps prepared. [Geometry_Nodes_Change_To_NURBS_Crash.blend](https://archive.blender.org/developer/F12743829/Geometry_Nodes_Change_To_NURBS_Crash.blend) Video with crash event attached as well. [Blender crash (change spline to NURBS in Geo Nodes).mkv](https://archive.blender.org/developer/F12743867/Blender_crash__change_spline_to_NURBS_in_Geo_Nodes_.mkv) ### Thanks!
Author

Added subscriber: @Android135

Added subscriber: @Android135

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm, on both 3.0.0 and on a debug build of 3.1.0. Non-debug builds are getting an access violation.

I get the following assertion failure in a 3.1.0 debug build: P2662

I believe that lite debug build was built from a90c356467

Can confirm, on both 3.0.0 and on a debug build of 3.1.0. Non-debug builds are getting an access violation. I get the following assertion failure in a 3.1.0 debug build: [P2662](https://archive.blender.org/developer/P2662.txt) I believe that lite debug build was built from a90c356467
Hans Goudey self-assigned this 2021-12-15 01:54:41 +01:00

This issue was referenced by 0a6b6eb13b

This issue was referenced by 0a6b6eb13ba63ab355903296cb0c6b3afdc46225

This issue was referenced by 67b657f07c

This issue was referenced by 67b657f07c96c5782ebf603ab36af607168d7acb
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94082
No description provided.